styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Body */
body {
    font-family: Arial, Helvetica, sans-serif;
    min-height: 100vh;

    display: flex;
    flex-direction: column;

    background-color: white;
    color: #333;
}


/* Navigation Bar */
.navbar {
    height: 50px;

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 0 10px;

    background-color: #3d8b5a;
    color: white;
}

.logo {
    font-size: 1.4rem;
    font-weight: bold;
}

.nav-links {
    display: flex;
    gap: 25px;
    list-style: none;
}

.nav-links a {
    color: white;
    text-decoration: none;
    font-weight: 500;
}

.nav-links a:hover {
    text-decoration: underline;
}


/* Main Content */
.hero {
    flex: 1;

    position: relative;

    display: flex;
    justify-content: center;
    align-items: center;

    min-height: calc(100vh - 140px);
    overflow-y: auto;
    overflow-x: hidden;

    padding: 0 3rem;   /* side spacing for mobile */
}


/* Text overlay */
.hero-content {
    text-align: left;

    max-width: 1000px;
    width: 100%;          /*  prevent overflow issues */

    padding: 0 1rem;      /* keep text off screen edges */

    border-radius: 20px;
    box-sizing: border-box;
}

.hero-content h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
    margin-top: 2rem;

    text-align: center;
}

.hero-content p {
    font-size: 1.2rem;
    line-height: 1.6;

    margin: 1.5rem 0;   /* removes side-breaking margins */
}

/* Large image */
.hero-image {
    height: 300px;
    object-fit: cover;
    display: block;
    margin: 0 auto;

    max-width: 100%;   /* prevents overflow on small screens */
}


/* Footer */
.footer {
    height: 50px;

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: #2f6e48;
    color: white;
}


.definition {
    font-size: 1.7rem;
    padding-left: 1.5rem;
    border-left: 5px solid #3d8b5a;
    color: #444;
}


a {
    color: #3d8b5a;
    font-style: italic;
    text-decoration: none;
    font-weight: 500;
    transition: all 0.2s ease;
}

a:hover {
    text-decoration: underline;
    color: #2c6b2f;
}

